doc-glossario-v1 - verifier changed

--- a/docs/01-living_documents/esterno/glossario/glossario.meta.yaml
+++ b/docs/01-living_documents/esterno/glossario/glossario.meta.yaml
@@ -6,6 +6,6 @@ changelog:
       - Francesco Marcon
       - Matteo Mantoan
     verifiers: 
-      - test
+      - Leonardo Preo
     description: >
         Prima versione del glossario, con implemetazione di automatismi e primi termini
