Update script execution path for base model generation
Change directory before running the validation script to ensure correct output path.

--- a/.github/workflows/pr-check-n-build.yml
+++ b/.github/workflows/pr-check-n-build.yml
@@ -37,8 +37,8 @@ jobs:
 
       - name: Generate base model
         run: |
-          python base_checkout/scripts/validate_pr_changes.py generate \
-            --output base-model.json
+          cd base_checkout && python scripts/validate_pr_changes.py generate \
+            --output ../base-model.json && cd ..
 
       - name: Generate PR model
         run: |
