--- a/docs/01-living_documents/esterno/glossario/glossario.meta.yaml
+++ b/docs/01-living_documents/esterno/glossario/glossario.meta.yaml
@@ -1,5 +1,14 @@
 title: Glossario
 changelog:
+  - version: 2
+    date: "2025-10-31"
+    authors:
+      - Francesco Marcon
+      - Matteo Mantoan
+    verifiers: 
+      - Leonardo Preo
+    description: >
+        Aggiunta nuovi termini e cambiamenti minori
   - version: 1
     date: "2025-10-30"
     authors:
