Edited analisi_capitolati and modified color links

--- a/docs/11-candidatura/esterno/analisi_capitolati/analisi_capitolati.meta.yaml
+++ b/docs/11-candidatura/esterno/analisi_capitolati/analisi_capitolati.meta.yaml
@@ -1,5 +1,14 @@
 title: Analisi dei capitolati
 changelog:
+  - version: 2
+    date: "2025-10-31"
+    authors:
+      - Alessandro Mazzariol
+    verifiers: 
+      - Francesco Marcon
+    description: >
+        Aggiunti link al sito nei capitolati C5 e C7
+
   - version: 1
     date: "2025-10-27"
     authors:
