doc-glossario-v2 - changed verifier

--- a/docs/01-living_documents/esterno/glossario/glossario.meta.yaml
+++ b/docs/01-living_documents/esterno/glossario/glossario.meta.yaml
@@ -6,7 +6,7 @@ changelog:
       - Francesco Marcon
       - Matteo Mantoan
     verifiers: 
-      - Leonardo Preo
+      - Matteo Mantoan
     description: >
         Aggiunta nuovi termini e cambiamenti minori
   - version: 1
