verbint_2025-11-15-v1.1 - changed something in the structure of the document

--- a/docs/11-candidatura/interno/verbint_2025-10-15/verbint_2025-10-15.meta.yaml
+++ b/docs/11-candidatura/interno/verbint_2025-10-15/verbint_2025-10-15.meta.yaml
@@ -1,5 +1,13 @@
 title: Verbale Interno 2025-10-15
 changelog:
+  - version: 2
+    date: "2025-11-05"
+    authors:
+      - Francesco Marcon
+    verifiers: 
+      - "Matteo Mantoan"
+    description: >
+      Piccoli cambiamenti di struttura e forma
   - version: 1
     date: "2025-10-25"
     authors:
