verbint_2025-11-17-v1.1 - changed the changelog for new versioning scripts

--- a/docs/11-candidatura/interno/verbint_2025-10-15/verbint_2025-10-15.meta.yaml
+++ b/docs/11-candidatura/interno/verbint_2025-10-15/verbint_2025-10-15.meta.yaml
@@ -7,7 +7,7 @@ changelog:
     verifiers: 
       - "Matteo Mantoan"
     description: >
-      Piccoli cambiamenti di struttura e forma
+      Piccoli cambiamenti di struttura e forma (1.1)
   - version: 1
     date: "2025-10-25"
     authors:
@@ -15,4 +15,4 @@ changelog:
     verifiers: 
       - "Mario de Pasquale"
     description: >
-      Prima versione del Verbale Interno 15/10
+      Prima versione del Verbale Interno 15/10 (0.1)
