--- a/docs/11-candidatura/interno/verbint_2025-10-15/verbint_2025-10-15.meta.yaml
+++ b/docs/11-candidatura/interno/verbint_2025-10-15/verbint_2025-10-15.meta.yaml
@@ -7,4 +7,4 @@ changelog:
     verifiers: 
       - "Mario de Pasquale"
     description: >
-      Prima versione del Verbale Interno 15/10
+      Prima versione del Verbale Interno 15/10 (0.1)
