--- a/docs/01-living_documents/esterno/glossario/glossario.meta.yaml
+++ b/docs/01-living_documents/esterno/glossario/glossario.meta.yaml
@@ -1,19 +1,25 @@
 title: Glossario
+
 changelog:
-  - version: 2
+  - version: "2.0"
+    date: "2025-10-31"
+    verifiers: 
+      - Matteo Mantoan
+  - version: "1.1"
     date: "2025-10-31"
     authors:
       - Francesco Marcon
-    verifiers: 
-      - Matteo Mantoan
     description: >
         Aggiunta nuovi termini e cambiamenti minori
-  - version: 1
+
+  - version: "1.0"
+    date: "2025-10-30"
+    verifiers: 
+      - Leonardo Preo
+  - version: "0.1"
     date: "2025-10-30"
     authors:
       - Francesco Marcon
       - Matteo Mantoan
-    verifiers: 
-      - Leonardo Preo
     description: >
         Prima versione del glossario, con implemetazione di automatismi e primi termini
