--- a/docs/11-candidatura/esterno/analisi_capitolati/analisi_capitolati.meta.yaml
+++ b/docs/11-candidatura/esterno/analisi_capitolati/analisi_capitolati.meta.yaml
@@ -1,19 +1,23 @@
 title: Analisi dei capitolati
 changelog:
-  - version: 2
+  - version: "2.0"
+    date: "2025-10-31"
+    verifiers:
+      - Francesco Marcon
+  - version: "1.1"
     date: "2025-10-31"
     authors:
       - Alessandro Mazzariol
-    verifiers: 
-      - Francesco Marcon
     description: >
         Aggiunti link al sito nei capitolati C5 e C7
 
-  - version: 1
+  - version: "1.0"
+    date: "2025-10-27"
+    verifiers:
+      - Leonardo Preo
+  - version: "0.1"
     date: "2025-10-27"
     authors:
       - Francesco Marcon
-    verifiers: 
-      - Team NoTIP
     description: >
       Prima versione dell'Analisi dei Capitolati
