--- a/docs/11-candidatura/esterno/dichiarazione_impegni/dichiarazione_impegni.meta.yaml
+++ b/docs/11-candidatura/esterno/dichiarazione_impegni/dichiarazione_impegni.meta.yaml
@@ -1,13 +1,15 @@
 title: Dichiarazione degli impegni
 changelog:
-  - version: 1
+  - version: "1.0"
+    date: "2025-10-31"
+    verifiers:
+      - Mario De Pasquale
+  - version: "0.1"
     date: "2025-10-31"
     authors:
       - Valerio Solito
       - Alessandro Contarini
       - Francesco Marcon
-    verifiers:
-      - Team NoTIP
     description: >
       Prima versione della dichiarazione degli impegni
 
