--- a/docs/11-candidatura/esterno/verbest_2025-10-25/verbest_2025-10-25.meta.yaml
+++ b/docs/11-candidatura/esterno/verbest_2025-10-25/verbest_2025-10-25.meta.yaml
@@ -1,11 +1,12 @@
 title: Verbale Esterno 2025-10-25 (Eggon)
 changelog:
-  - version: 1
+  - version: "1.0"
+    date: "2025-10-25"
+    verifiers: 
+      - "Matteo Mantoan"
+  - version: "0.1"
     date: "2025-10-25"
     authors:
       - Francesco Marcon
-    verifiers: 
-      - "Matteo Mantoan"
-      - "Eggon"
     description: >
       Prima versione del Verbale Esterno post incontro con l'azienda proponente Eggon.
