--- a/docs/11-candidatura/interno/verbint_2025-10-15/verbint_2025-10-15.meta.yaml
+++ b/docs/11-candidatura/interno/verbint_2025-10-15/verbint_2025-10-15.meta.yaml
@@ -1,10 +1,12 @@
 title: Verbale Interno 2025-10-15
 changelog:
-  - version: 1
+  - version: "1.0"
+    date: "2025-10-25"
+    verifiers:
+      - Mario De Pasquale
+  - version: "0.1"
     date: "2025-10-25"
     authors:
       - Francesco Marcon
-    verifiers: 
-      - "Mario de Pasquale"
     description: >
-      Prima versione del Verbale Interno 15/10
+      Creazione Verbale Interno 2025-10-15
