fix python deps in workflows
was missing

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,7 @@ jobs:
           python-version: '3.13'
 
       - name: Install Python dependencies
-        run: pip install pyyaml jsonschema
-
+        run: pip install pyyaml jsonschema packaging
       - name: Install Typst
         uses: typst-community/setup-typst@v3
 
