doc-verbint_2025-10-25-v1.1 - changed the changelog for new versioning scripts and the structure of the document

--- a/docs/11-candidatura/interno/verbint_2025-10-25/verbint_2025-10-25.meta.yaml
+++ b/docs/11-candidatura/interno/verbint_2025-10-25/verbint_2025-10-25.meta.yaml
@@ -1,5 +1,14 @@
 title: Verbale Interno 2025-10-25
 changelog:
+  - version: 2
+    date: "2025-11-05"
+    authors:
+      - Mario De Pasquale
+      - Francesco Marcon
+    verifiers:
+      - Matteo Mantoan
+    description: >
+      Nuova struttura punti: discussione, decisioni, azioni (1.1)
   - version: 1
     date: "2025-10-26"
     authors:
@@ -7,4 +16,4 @@ changelog:
     verifiers:
       - Mario De Pasquale
     description: >
-      Verbale Interno avvenuto in data 25 Ottobre 2025 alle ore 10:00
+      Prima versione verbale Interno 2025-10-25 (0.1)
