--- a/docs/11-candidatura/interno/verbint_2025-10-25/verbint_2025-10-25.meta.yaml
+++ b/docs/11-candidatura/interno/verbint_2025-10-25/verbint_2025-10-25.meta.yaml
@@ -8,7 +8,7 @@ changelog:
     verifiers:
       - Matteo Mantoan
     description: >
-      Nuova struttura punti: discussione, decisioni, azioni (1.1)
+      Nuova struttura punti: discussione, decisioni (1.1)
   - version: 1
     date: "2025-10-26"
     authors:
