--- a/docs/11-candidatura/esterno/lettera_presentazione/lettera_presentazione.meta.yaml
+++ b/docs/11-candidatura/esterno/lettera_presentazione/lettera_presentazione.meta.yaml
@@ -1,5 +1,15 @@
 title: Lettera di presentazione
 changelog:
+  - version: 2
+    date: "2025-11-05"
+    authors:
+      - Valerio Solito
+      - Alessandro Contarini
+    verifiers:
+      - "a"
+    description: >
+      Redazione contenuto della lettera di presentazione - Candidatura capitolato e impegno dichiarato. (0.2)
+
   - version: 1
     date: "2025-11-05"
     authors:
