v.(0.5) Inserimento link e cambio di versionamento.

--- a/docs/11-candidatura/esterno/lettera_presentazione/lettera_presentazione.meta.yaml
+++ b/docs/11-candidatura/esterno/lettera_presentazione/lettera_presentazione.meta.yaml
@@ -1,5 +1,16 @@
 title: Lettera di presentazione
 changelog:
+  - version: 5
+    date: "2025-11-05"
+    authors:
+      - Valerio Solito
+      - Alessandro Contarini
+    verifiers:
+      - "a"
+    description: >
+      Inserimento link ai documenti.
+      Modifica del ciclo di vita del documento - nuova tecnica di versionamento (0.5).
+
   - version: 4
     date: "2025-11-05"
     authors:
