doc-lettera_presentazione - verifica e aggiornamento a nuovo sistema di versionamento

--- a/docs/11-candidatura/esterno/lettera_presentazione/lettera_presentazione.meta.yaml
+++ b/docs/11-candidatura/esterno/lettera_presentazione/lettera_presentazione.meta.yaml
@@ -1,52 +1,43 @@
 title: Lettera di presentazione
+
 changelog:
-  - version: 5
+
+  - version: "1.0"
+    date: "2025-11-05"
+    verifiers:
+      - Matteo Mantoan
+  - version: "0.5"
     date: "2025-11-05"
     authors:
       - Valerio Solito
       - Alessandro Contarini
-    verifiers:
-      - "a"
     description: >
       Inserimento link ai documenti.
-      Modifica del ciclo di vita del documento - nuova tecnica di versionamento (0.5).
-
-  - version: 4
+  - version: "0.4"
     date: "2025-11-05"
     authors:
       - Valerio Solito
       - Alessandro Contarini
-    verifiers:
-      - "a"
     description: >
-      Redazione contenuto della lettera di presentazione - Documentazione attività svolte dal team. (0.4)
-
-  - version: 3
+      Redazione contenuto della lettera di presentazione - Documentazione attività svolte dal team
+  - version: "0.3"
     date: "2025-11-05"
     authors:
       - Valerio Solito
       - Alessandro Contarini
-    verifiers:
-      - "a"
     description: >
-      Redazione contenuto della lettera di presentazione - Incontro conoscitivo. (0.3)
-
-  - version: 2
+      Redazione contenuto della lettera di presentazione - Incontro conoscitivo
+  - version: "0.2"
     date: "2025-11-05"
     authors:
       - Valerio Solito
       - Alessandro Contarini
-    verifiers:
-      - "a"
     description: >
-      Redazione contenuto della lettera di presentazione - Candidatura capitolato e impegno dichiarato. (0.2)
-
-  - version: 1
+      Redazione contenuto della lettera di presentazione - Candidatura capitolato e impegno dichiarato
+  - version: "0.1"
     date: "2025-11-05"
     authors:
       - Valerio Solito
       - Alessandro Contarini
-    verifiers:
-      - "a"
     description: >
-      Creazione del documento - Lettera di presentazione. (0.1)
+      Creazione del documento - Lettera di presentazione
