--- a/docs/11-candidatura/esterno/dichiarazione_impegni/dichiarazione_impegni.meta.yaml
+++ b/docs/11-candidatura/esterno/dichiarazione_impegni/dichiarazione_impegni.meta.yaml
@@ -1,15 +1,10 @@
 title: Dichiarazione degli impegni
 changelog:
-  - version: "1.0"
-    date: "2025-10-31"
-    verifiers:
-      - Mario De Pasquale
   - version: "0.1"
-    date: "2025-10-31"
+    date: "2025-11-05"
     authors:
       - Valerio Solito
       - Alessandro Contarini
-      - Francesco Marcon
     description: >
-      Prima versione della dichiarazione degli impegni
+      Creazione del documento - Dichiarazione degli impegni.
 
