--- a/docs/11-candidatura/esterno/dichiarazione_impegni/dichiarazione_impegni.meta.yaml
+++ b/docs/11-candidatura/esterno/dichiarazione_impegni/dichiarazione_impegni.meta.yaml
@@ -1,5 +1,12 @@
 title: Dichiarazione degli impegni
 changelog:
+  - version: "0.3"
+    date: "2025-11-05"
+    authors:
+      - Valerio Solito
+      - Alessandro Contarini
+    description: >
+      Redazione del contenuto della dichiarazione degli impegni - Distribuzione ore di ciascun componente del team per ciascun ruolo.
   - version: "0.2"
     date: "2025-11-05"
     authors:
