--- a/docs/11-candidatura/esterno/dichiarazione_impegni/dichiarazione_impegni.meta.yaml
+++ b/docs/11-candidatura/esterno/dichiarazione_impegni/dichiarazione_impegni.meta.yaml
@@ -1,19 +1,28 @@
 title: Dichiarazione degli impegni
 changelog:
+  - version: "0.4"
+    date: "2025-11-05"
+    authors:
+      - Valerio Solito
+      - Alessandro Contarini
+    description: >
+      Definizione dei ruoli, preventivo finale e data consegna.
+
   - version: "0.3"
     date: "2025-11-05"
     authors:
       - Valerio Solito
       - Alessandro Contarini
     description: >
-      Redazione del contenuto della dichiarazione degli impegni - Distribuzione ore di ciascun componente del team per ciascun ruolo.
+      Distribuzione ore di ciascun componente del team per ciascun ruolo.
+  
   - version: "0.2"
     date: "2025-11-05"
     authors:
       - Valerio Solito
       - Alessandro Contarini
     description: >
-      Redazione del contenuto della dichiarazione degli impegni - Scelta capitolato e preventivo costi per ruolo.
+      Scelta capitolato e preventivo costi per ruolo.
 
   - version: "0.1"
     date: "2025-11-05"
@@ -21,5 +30,5 @@ changelog:
       - Valerio Solito
       - Alessandro Contarini
     description: >
-      Creazione del documento - Dichiarazione degli impegni.
+      Creazione del documento.
 
