doc-dichiarazione_impegni-v1.0 verifica e approvazione documento

--- a/docs/11-candidatura/esterno/dichiarazione_impegni/dichiarazione_impegni.meta.yaml
+++ b/docs/11-candidatura/esterno/dichiarazione_impegni/dichiarazione_impegni.meta.yaml
@@ -1,6 +1,9 @@
 title: Dichiarazione degli impegni
 changelog:
-
+  - version: "1.0"
+    date: "2025-11-05"
+    verifiers:
+      - Alessandro Mazzariol
   - version: "0.5"
     date: "2025-11-05"
     authors:
