--- a/docs/01-living_documents/esterno/glossario/glossario.meta.yaml
+++ b/docs/01-living_documents/esterno/glossario/glossario.meta.yaml
@@ -1,6 +1,12 @@
 title: Glossario
 
 changelog:
+  - version: "2.1"
+    date: "2025-11-07"
+    authors:
+      - Francesco Marcon
+    description: >
+        Cambiamento ordinamento termini glossario e tolti indici numerici
   - version: "2.0"
     date: "2025-10-31"
     verifiers: 
