--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
 name: "Deploy: Build & Publish Site to GitHub Pages"
 
 on:
-  push:
-    branches: [main]
+  schedule:
+    - cron: '0 4 * * 1,4'
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
