--- a/docs/11-candidatura/slides/ddb_2025-10-27/ddb_2025-10-27.meta.yaml
+++ b/docs/11-candidatura/slides/ddb_2025-10-27/ddb_2025-10-27.meta.yaml
@@ -1,12 +1,17 @@
 title: Diario di Bordo 2025-10-27
 changelog:
-  - version: "1.0"
-    date: "2025-10-26"
-    verifiers:
-      - "Matteo Mantoan"
-  - version: "0.1"
+  - version: "1.0.0"
     date: "2025-10-26"
     authors:
       - Valerio Solito
+    verifier: "Matteo Mantoan"
+    description: >
+      Prima versione stabile
+
+  - version: "0.0.1"
+    date: "2025-10-26"
+    authors:
+      - Valerio Solito
+    verifier: "Matteo Mantoan"
     description: >
       Creazione del diario di Bordo
