--- a/docs/01-living_documents/interno/norme_progetto/norme_progetto.meta.yaml
+++ b/docs/01-living_documents/interno/norme_progetto/norme_progetto.meta.yaml
@@ -1,39 +1,40 @@
 title: Norme di Progetto
-
 changelog:
-
-  - version: "2.0"
-    date: "2025-11-05"
-    verifiers: 
-      - Francesco Marcon
-  - version: "1.3"
+  - version: "1.2.1"
     date: "2025-11-05"
     authors:
       - Leonardo Preo
+    verifier: Francesco Marcon
     description: >
-        Sostituzione Figura 1 "Ciclo di vita dei documenti" - nuova struttura ciclo di vita
-  - version: "1.2"
+        Sostituzione Figura 1 "Ciclo di vita dei documenti" 
+  - version: "1.2.0"
     date: "2025-11-04"
     authors:
       - Leonardo Preo
+    verifier: Matteo Mantoan
     description: >
         Modifica spiegazione commit e verifica.
-  - version: "1.1"
+  - version: "1.1.0"
     date: "2025-11-04"
     authors:
       - Leonardo Preo
+    verifier: Francesco Marcon
     description: >
         Modifica ciclo di vita del documento - nuova tecnica di versionamento.
-
-  - version: "1.0"
-    date: "2025-10-31"
-    verifiers:
-      - Alessandro Mazzariol
-  - version: "0.1"
+  - version: "1.0.0"
     date: "2025-10-31"
     authors:
       - Leonardo Preo
       - Matteo Mantoan
-      - Francesco Marcon
+    verifier: Alessandro Mazzariol
     description: >
-        Prima versione delle Norme di Progetto
+        Prima stesura
+  - version: "0.0.1"
+    date: "2025-10-30"
+    authors:
+      - Leonardo Preo
+      - Matteo Mantoan
+      - Francesco Marcon
+    verifier: Alessandro Mazzariol
+    description: >
+        Prima bozza delle Norme di Progetto
