--- a/docs/11-candidatura/esterno/lettera_presentazione/lettera_presentazione.meta.yaml
+++ b/docs/11-candidatura/esterno/lettera_presentazione/lettera_presentazione.meta.yaml
@@ -1,43 +1,50 @@
 title: Lettera di presentazione
-
 changelog:
-
-  - version: "1.0"
-    date: "2025-11-05"
-    verifiers:
-      - Matteo Mantoan
-  - version: "0.5"
+  - version: "1.0.0"
     date: "2025-11-05"
     authors:
       - Valerio Solito
       - Alessandro Contarini
+    verifier: Matteo Mantoan
+    description: >
+      Prima versione stabile
+  - version: "0.3.1"
+    date: "2025-11-05"
+    authors:
+      - Valerio Solito
+      - Alessandro Contarini
+    verifier: Matteo Mantoan
     description: >
       Inserimento link ai documenti.
-  - version: "0.4"
+  - version: "0.3.0"
     date: "2025-11-05"
     authors:
       - Valerio Solito
       - Alessandro Contarini
+    verifier: Leonardo Preo
     description: >
-      Redazione contenuto della lettera di presentazione - Documentazione attività svolte dal team
-  - version: "0.3"
+      Aggiunta contenuto - Documentazione attività svolte dal team
+  - version: "0.2.0"
     date: "2025-11-05"
     authors:
       - Valerio Solito
       - Alessandro Contarini
+    verifier: Leonardo Preo
     description: >
-      Redazione contenuto della lettera di presentazione - Incontro conoscitivo
-  - version: "0.2"
+      Aggiunta contenuto - Incontro conoscitivo
+  - version: "0.1.0"
     date: "2025-11-05"
     authors:
       - Valerio Solito
       - Alessandro Contarini
+    verifier: Matteo Mantoan
     description: >
-      Redazione contenuto della lettera di presentazione - Candidatura capitolato e impegno dichiarato
-  - version: "0.1"
+      Aggiunta contenuto - Candidatura capitolato e impegno dichiarato
+  - version: "0.0.1"
     date: "2025-11-05"
     authors:
       - Valerio Solito
       - Alessandro Contarini
+    verifier: Matteo Mantoan
     description: >
-      Creazione del documento - Lettera di presentazione
+      Bozza Lettera di presentazione
