--- a/docs/11-candidatura/esterno/verbest_2025-10-25/verbest_2025-10-25.meta.yaml
+++ b/docs/11-candidatura/esterno/verbest_2025-10-25/verbest_2025-10-25.meta.yaml
@@ -1,12 +1,16 @@
 title: Verbale Esterno 2025-10-25 (Eggon)
 changelog:
-  - version: "1.0"
-    date: "2025-10-25"
-    verifiers: 
-      - "Matteo Mantoan"
-  - version: "0.1"
+  - version: "1.0.0"
     date: "2025-10-25"
     authors:
       - Francesco Marcon
+    verifier: Matteo Mantoan
+    description: >
+      Versione stabile verbale
+  - version: "0.0.1"
+    date: "2025-10-25"
+    authors:
+      - Francesco Marcon
+    verifier: Matteo Mantoan
     description: >
       Prima versione del Verbale Esterno post incontro con l'azienda proponente Eggon.
