--- a/docs/11-candidatura/interno/verbint_2025-10-17/verbint_2025-10-17.meta.yaml
+++ b/docs/11-candidatura/interno/verbint_2025-10-17/verbint_2025-10-17.meta.yaml
@@ -1,24 +1,23 @@
 title: Verbale Interno 2025-10-17
 changelog:
-
-  - version: "2.0"
-    date: "2025-11-05"
-    verifiers:
-      - Matteo Mantoan
-  - version: "1.1"
+  - version: "1.0.1"
     date: "2025-11-05"
     authors:
       - Francesco Marcon
+    verifier: Matteo Mantoan
     description: >
-      Nuova struttura punti: discussione, decisioni, azioni
-
-  - version: "1.0"
-    date: "2025-10-25"
-    verifiers:
-      - Mario De Pasquale
-  - version: "0.1"
+      Divisione in punti: discussione, decisioni, azioni
+  - version: "1.0.0"
     date: "2025-10-25"
     authors:
       - Francesco Marcon
+    verifier: Mario De Pasquale
     description: >
-      Creazione Verbale Interno 2025-10-17
+      Versione stabile verbale 
+  - version: "0.0.1"
+    date: "2025-10-25"
+    authors:
+      - Francesco Marcon
+    verifier: Mario De Pasquale
+    description: >
+      Prima bozza del verbale
