--- a/docs/11-candidatura/interno/verbint_2025-10-25/verbint_2025-10-25.meta.yaml
+++ b/docs/11-candidatura/interno/verbint_2025-10-25/verbint_2025-10-25.meta.yaml
@@ -1,24 +1,24 @@
 title: Verbale Interno 2025-10-25
 changelog:
-  - version: "2.0"
-    date: "2025-11-05"
-    verifiers:
-      - Leonardo Preo
-  - version: "1.1"
+  - version: "1.0.1"
     date: "2025-11-05"
     authors:
       - Mario De Pasquale
       - Francesco Marcon
+    verifier: "Leonardo Preo"
     description: >
-      Nuova struttura punti: discussione, decisioni, azioni
-
-  - version: "1.0"
-    date: "2025-10-26"
-    verifiers:
-      - Mario De Pasquale
-  - version: "0.1"
+      Divisione in punti: discussione, decisioni, azioni
+  - version: "1.0.0"
     date: "2025-10-26"
     authors:
       - Alessandro Mazzariol
+    verifier: Mario De Pasquale
     description: >
-      Creazione verbale interno 25 Ottobre 2025
+      Versione stabile verbale
+  - version: "0.0.1"
+    date: "2025-10-26"
+    authors:
+      - Alessandro Mazzariol
+    verifier: Mario De Pasquale
+    description: >
+      Prima bozza del verbale
