--- a/docs/11-candidatura/interno/verbint_2025-11-04/verbint_2025-11-04.meta.yaml
+++ b/docs/11-candidatura/interno/verbint_2025-11-04/verbint_2025-11-04.meta.yaml
@@ -2,19 +2,24 @@ title: Verbale Interno 2025-11-04
 
 changelog:
 
-  - version: "1.0"
-    date: "2025-11-05"
-    verifiers:
-      - "Alessandro Mazzariol"
-  - version: "0.2"
+  - version: "1.0.0"
     date: "2025-11-05"
     authors:
       - Francesco Marcon
+    verifier: "Alessandro Mazzariol"
     description: >
-      Modifiche minori di forma
-  - version: "0.1"
+      Versione stabile verbale
+  - version: "0.1.0"
+    date: "2025-11-05"
+    authors:
+      - Francesco Marcon
+    verifier: "Alessandro Mazzariol"
+    description: >
+      Stesura del verbale
+  - version: "0.0.1"
     date: "2025-11-04"
     authors:
       - Francesco Marcon
+    verifier: "Alessandro Mazzariol"
     description: >
-      Prima versione del Verbale Interno 2025-11-04
+      Prima bozza del verbale 
