--- a/docs/11-candidatura/esterno/analisi_capitolati/analisi_capitolati.meta.yaml
+++ b/docs/11-candidatura/esterno/analisi_capitolati/analisi_capitolati.meta.yaml
@@ -20,11 +20,11 @@ changelog:
       - Francesco Marcon
     verifier: Matteo Mantoan
     description: >
-      Stesura del documento.
+      Stesura del documento
   - version: "0.0.1"
     date: "2025-10-27"
     authors:
       - Francesco Marcon
     verifier: Leonardo Preo
     description: >
-      Prima bozza Analisi dei Capitolati.
+      Prima bozza Analisi dei Capitolati
