--- a/docs/11-candidatura/esterno/dichiarazione_impegni/dichiarazione_impegni.meta.yaml
+++ b/docs/11-candidatura/esterno/dichiarazione_impegni/dichiarazione_impegni.meta.yaml
@@ -14,7 +14,7 @@ changelog:
       - Matteo Mantoan
     verifier: Francesco Marcon
     description: >
-      Riorganizzazione documento, ritocco tabella ore ruolo-persona.
+      Riorganizzazione documento, ritocco tabella ore ruolo-persona
   - version: "0.3.0"
     date: "2025-11-05"
     authors:
@@ -22,7 +22,7 @@ changelog:
       - Alessandro Contarini
     verifier: Leonardo Preo
     description: >
-      Definizione dei ruoli, preventivo finale e data consegna.
+      Definizione dei ruoli, preventivo finale e data consegna
   - version: "0.2.0"
     date: "2025-11-05"
     authors:
@@ -30,7 +30,7 @@ changelog:
       - Alessandro Contarini
     verifier: Mario De Pasquale
     description: >
-      Distribuzione ore di ciascun componente del team per ciascun ruolo.
+      Distribuzione ore di ciascun componente del team per ciascun ruolo
   - version: "0.1.0"
     date: "2025-11-05"
     authors:
@@ -38,7 +38,7 @@ changelog:
       - Alessandro Contarini
     verifier: Leonardo Preo
     description: >
-      Scelta capitolato e preventivo costi per ruolo.
+      Scelta capitolato e preventivo costi per ruolo
   - version: "0.0.1"
     date: "2025-11-05"
     authors:
@@ -46,5 +46,5 @@ changelog:
       - Alessandro Contarini
     verifier: Matteo Mantoan
     description: >
-      Prima bozza del documento.
+      Prima bozza del documento
 
