--- a/docs/11-candidatura/esterno/verbest_2025-10-24/verbest_2025-10-24.meta.yaml
+++ b/docs/11-candidatura/esterno/verbest_2025-10-24/verbest_2025-10-24.meta.yaml
@@ -13,4 +13,4 @@ changelog:
       - Francesco Marcon
     verifier: Matteo Mantoan
     description: >
-      Prima versione del Verbale Esterno post incontro con l'azienda proponente M31.
+      Prima versione del Verbale Esterno post incontro con l'azienda proponente M31
