--- a/docs/01-living_documents/interno/norme_progetto/norme_progetto.meta.yaml
+++ b/docs/01-living_documents/interno/norme_progetto/norme_progetto.meta.yaml
@@ -13,14 +13,14 @@ changelog:
       - Leonardo Preo
     verifier: Matteo Mantoan
     description: >
-        Modifica spiegazione commit e verifica.
+        Modifica spiegazione commit e verifica
   - version: "1.1.0"
     date: "2025-11-04"
     authors:
       - Leonardo Preo
     verifier: Francesco Marcon
     description: >
-        Modifica ciclo di vita del documento - nuova tecnica di versionamento.
+        Modifica ciclo di vita del documento - nuova tecnica di versionamento
   - version: "1.0.0"
     date: "2025-10-31"
     authors:
