--- a/docs/11-candidatura/esterno/verbest_2025-10-25/verbest_2025-10-25.meta.yaml
+++ b/docs/11-candidatura/esterno/verbest_2025-10-25/verbest_2025-10-25.meta.yaml
@@ -13,4 +13,4 @@ changelog:
       - Francesco Marcon
     verifier: Matteo Mantoan
     description: >
-      Prima versione del Verbale Esterno post incontro con l'azienda proponente Eggon.
+      Prima versione del Verbale Esterno post incontro con l'azienda proponente Eggon
