--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,8 @@ jobs:
           python-version: '3.13'
 
       - name: Install Python dependencies
-        run: pip install pyyaml jsonschema packaging
+        run: pip install -r scripts/requirements.txt
+
       - name: Install Typst
         uses: typst-community/setup-typst@v3
 
