implementato build changes

--- a/.github/workflows/pr-check-n-build.yml
+++ b/.github/workflows/pr-check-n-build.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Build docs from PR
         run: |
-          python3 do build all
+          python3 do build changes
       
       - name: Upload Build Artifacts (PDFs)
         if: always()
