--- a/docs/12-rtb/interno/verbint_2025-11-14/verbint_2025-11-14.meta.yaml
+++ b/docs/12-rtb/interno/verbint_2025-11-14/verbint_2025-11-14.meta.yaml
@@ -4,6 +4,6 @@ changelog:
     date: "2025-11-14"
     authors:
       - Leonardo Preo
-    verifier:
+    verifier: TBD
     description: >
       Prima stesura verbale
