--- a/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
+++ b/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
@@ -5,7 +5,7 @@ changelog:
     authors:
       - Leonardo Preo
       - Mario De Pasquale
-    verifier: TBD
+    verifier: Matteo Mantoan
     description: >
         Aggiustamento ore produttive per sprint
   - version: "0.4.0"
@@ -13,7 +13,7 @@ changelog:
     authors:
       - Leonardo Preo
       - Mario De Pasquale
-    verifier: TBD
+    verifier: Matteo Mantoan
     description: >
         Aggiunta specifica criteri rotazione dei ruoli
   - version: "0.3.1"
