--- a/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
+++ b/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
@@ -1,5 +1,21 @@
 title: Norme di Progetto
 changelog:
+  - version: "0.4.1"
+    date: "2025-11-16"
+    authors:
+      - Leonardo Preo
+      - Mario De Pasquale
+    verifier: Matteo Mantoan
+    description: >
+        Aggiustamento ore produttive per sprint
+  - version: "0.4.0"
+    date: "2025-11-16"
+    authors:
+      - Leonardo Preo
+      - Mario De Pasquale
+    verifier: Matteo Mantoan
+    description: >
+        Aggiunta specifica criteri rotazione dei ruoli
   - version: "0.3.1"
     date: "2025-11-05"
     authors:
