doc-verbest_2025-11-18-v1.0.1 - Aggiustamenti minori

--- a/docs/12-rtb/verbest/verbest_2025-11-18/verbest_2025-11-18.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2025-11-18/verbest_2025-11-18.meta.yaml
@@ -1,10 +1,18 @@
 title: Verbale Esterno 2025-10-24 (M31)
 changelog:
+  - version: "1.0.1"
+    date: "2025-11-25"
+    authors:
+      - Matteo Mantoan
+    verifier: Francesco Marcon
+    description: >
+      Minori aggiustamenti stilistici
+
   - version: "1.0.0"
     date: "2025-11-25"
     authors:
       - Alessandro Contarini
-    verifier: TBD
+    verifier: Matteo Mantoan
     description: >
       Versione stabile verbale
   
@@ -12,7 +20,7 @@ changelog:
     date: "2025-11-25"
     authors:
       - Alessandro Contarini
-    verifier: TBD
+    verifier: Matteo Mantoan
     description: >
       Ristrutturazione contenuto
 
@@ -20,7 +28,7 @@ changelog:
     date: "2025-11-19"
     authors:
       - Alessandro Contarini
-    verifier: TBD
+    verifier: Matteo Mantoan
     description: >
       Correzione errore ortografico
 
@@ -28,7 +36,7 @@ changelog:
     date: "2025-11-19"
     authors:
       - Alessandro Contarini
-    verifier: TBD
+    verifier: Matteo Mantoan
     description: >
       Redazione contenuto del verbale
 
@@ -36,6 +44,6 @@ changelog:
     date: "2025-11-19"
     authors:
       - Alessandro Contarini
-    verifier: TBD
+    verifier: Matteo Mantoan
     description: >
       Prima versione del Verbale Esterno post incontro con l'azienda proponente M31
