--- a/docs/12-rtb/slides/ddb_2025-11-10/ddb_2025-11-10.meta.yaml
+++ b/docs/12-rtb/slides/ddb_2025-11-10/ddb_2025-11-10.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2025-11-09"
     authors:
       - Alessandro Mazzariol
-    verifier: "Matteo Mantoan"
+    verifier: "Leonardo Preo"
     description: >
       Prima versione stabile
 
@@ -12,6 +12,6 @@ changelog:
     date: "2025-11-09"
     authors:
       - Alessandro Mazzariol
-    verifier: "Matteo Mantoan"
+    verifier: "Leonardo Preo"
     description: >
       Creazione del diario di Bordo
