--- a/docs/12-rtb/slides/ddb_2025-11-24/ddb_2025-11-24.meta.yaml
+++ b/docs/12-rtb/slides/ddb_2025-11-24/ddb_2025-11-24.meta.yaml
@@ -4,6 +4,6 @@ changelog:
     date: "2025-11-23"
     authors:
       - Matteo Mantoan
-    verifier: TBD
+    verifier: Leonardo Preo
     description: >
       Creazione del diario di Bordo
