--- a/docs/12-rtb/docest/glossario/glossario.meta.yaml
+++ b/docs/12-rtb/docest/glossario/glossario.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2025-11-22"
     authors:
       - Francesco Marcon
-    verifier: Alessandro Mazzariol
+    verifier: TBD
     description: >
       Termini post aggiornamento versionamento e struttura repo
   - version: "1.0.0"
