Update verifier name in meta.yaml
Aggiunta del verificatore alla PR

--- a/docs/12-rtb/slides/ddb_2025-11-17/ddb_2025-11-17.meta.yaml
+++ b/docs/12-rtb/slides/ddb_2025-11-17/ddb_2025-11-17.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2025-11-16"
     authors:
       - Alessandro Contarini
-    verifier: TBD
+    verifier: Francesco Marcon
     description: >
       Prima versione stabile
 
