--- a/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
+++ b/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
@@ -1,30 +1,9 @@
 title: Analisi dei Requisiti
 changelog:
-  - version: "0.3.0"
+  - version: "0.0.1"
     date: "2025-11-27"
     authors:
       - Leonardo Preo
     verifier: TBD
     description: >
-        Inserimento sezioni 2.3 - Caratteristiche degli Utenti, 2.4 - Vincoli e Assunzioni
-  - version: "0.2.0"
-    date: "2025-11-26"
-    authors:
-      - Leonardo Preo
-    verifier: TBD
-    description: >
-        Inserimento sezioni 2.1 - Obiettivi del Prodotto, 2.2 - Architettura del Sistema
-  - version: "0.1.0"
-    date: "2025-11-26"
-    authors:
-      - Leonardo Preo
-    verifier: TBD
-    description: >
-        Stesura Introduzione
-  - version: "0.0.1"
-    date: "2025-11-26"
-    authors:
-      - Leonardo Preo
-    verifier: TBD
-    description: >
-        Prima bozza struttura documento
+        Prima stesura Analisi dei Requisiti
