--- a/docs/12-rtb/verbint/verbint_2025-11-07/verbint_2025-11-07.meta.yaml
+++ b/docs/12-rtb/verbint/verbint_2025-11-07/verbint_2025-11-07.meta.yaml
@@ -9,6 +9,13 @@ changelog:
     verifier: Leonardo Preo
     description: >
       Versione stabile verbale
+  - version: "0.3.0"
+    date: "2025-11-27"
+    authors:
+      - Mario De Pasquale
+    verifier: Leonardo Preo
+    description: >
+      Modifiche minori per l'indentazione sul primo punto
   - version: "0.2.0"
     date: "2025-11-27"
     authors:
