Update verifier name in requirements analysis
Verifica effettuata della bozza

--- a/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
+++ b/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
@@ -4,6 +4,6 @@ changelog:
     date: "2025-11-27"
     authors:
       - Leonardo Preo
-    verifier: TBD
+    verifier: Francesco Marcon
     description: >
         Prima stesura Analisi dei Requisiti
