--- a/docs/12-rtb/verbest/verbest_2025-11-28/verbest_2025-11-28.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2025-11-28/verbest_2025-11-28.meta.yaml
@@ -1,5 +1,12 @@
 title: Verbale Esterno 2025-11-28 (M31)
 changelog:
+  - version: "1.0.0"
+    date: "2025-12-01"
+    authors:
+      - Francesco Marcon
+    verifier: TBD
+    description: > 
+      Correzioni minori e aggiunta actions 
   - version: "0.0.1"
     date: "2025-11-28"
     authors:
